# spider

./: .gitignore  README.md  pyproject.toml  requirements.txt
novel_scraper/: __init__.py  cleaner.py  cli.py  fetcher.py  optimizer.py  parser.py
tests/: test_cleaner.py  test_parser.py
